<resources>
    <string name="app_name">Click It</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Account Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in_now">Already have an Account, Log in now</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="user_name">User Name</string>
    <string name="textview">TextView</string>
    <string name="title_of_the_post">Title Of The Post</string>
    <string name="post_description">Post Description</string>
    <string name="post">Post</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blog_post_date">Blog Post Date</string>
    <string name="post_title">Post Title</string>
    <string name="_0_likes">0 Likes</string>
    <string name="new_post">New Post</string>
    <string name="account">Account</string>
    <string name="home">Home</string>


</resources>
