<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/log_email"
        android:layout_width="309dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/log_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="309dp"
        android:layout_height="43dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_email" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="220dp"
        android:layout_height="41dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/submit_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/login_reg_btnn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <Button
        android:id="@+id/forgotPassword"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/white_background"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/myblue"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />

    <Button
        android:id="@+id/login_reg_btnn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="404dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/white_background"
        android:text="@string/need_a_new_account"
        android:textAllCaps="false"
        android:textColor="@color/myblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="212dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_back_to" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="273dp"
        android:layout_height="90dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/click_it" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logo"
        android:layout_width="282dp"
        android:layout_height="165dp"
        android:layout_gravity="center"

        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="49dp"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/log_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/icon_lotii" />

</androidx.constraintlayout.widget.ConstraintLayout>